--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta >
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
-
 </head>
 <body>
 	<header id="header" class="hero-image">
@@ -14,38 +12,36 @@
 			<p id="hero-text">Semana promocional dos pães. <br> Da nossa casa para sua casa.</p>
 		</div>
 	</header>
-	<section>
+	<section class="store">
 		<div class="product-wrap">
-			<div class="product-image" id="myStoreDiv">
-				<button class="btn-subscribe" href="">Cadastre-se</button>
+			<div class="image-one" id="myStoreDiv">
 			</div>
 			<div class="product-text" id="myStoreTextDiv">
-				<h2>A loja de pães</h2>
-				<p>A loja é a melhor loja e vamos te oferecer descontos exclusivos. Nós temos assinaturas especiais para nossos clientes. <br> Faça seu cadastro para receber nossa divulgação da semana dos pães!</p>
+				<h3>A loja de pães</h3>
+				<p>A loja é a melhor loja e vamos te oferecer descontos exclusivos. Nós temos assinaturas especiais para nossos clientes.<br><br> Faça seu cadastro para receber nossa divulgação da semana dos pães!</p>
+				<button class="btn-subscribe" href="">Cadastre-se</button>
 			</div>
 		</div>
 		<div class="product-wrap">
 			<div class="product-text" id="myProductTextDiv">
 				<h3>Nossos produtos</h3>
-				<p>Feitos artesanalmente e virtualmente com muito carinho. Com os melhores ingredienes inventados. <br> Para garantir sua entrega e uma semana repleta de delícias virtuais, faça seu cadastro.</p>
-			</div>
-			<div class="product-image" id="myProductDiv">
+				<p>Feitos artesanalmente e virtualmente com muito carinho. Com os melhores ingredienes inventados. <br><br>  Para garantir sua entrega e uma semana repleta de delícias virtuais, faça seu cadastro.</p>
 				<button class="btn-subscribe" href="">Cadastre-se</button>
 			</div>
+			<div class="image-two" id="myProductDiv">
+			</div>
 		</div>
-		<div id="cadastro" class="product-wrap">
+		<div id="cadastro" class="product-wrap hero-image">
 			<form id="form">
 				<input id= "nome" type="text" name="nome" placeholder="Seu Nome">
 				<input id ="email" type="text" name="email" placeholder="Seu email">
 				<input id= "submit" type="submit" name="enviar">
 			</form>
 		</div>
-		</div>
 	</section>	
 	<footer>
 		<p>Exercício de Front-End de Ana Carolina</p>
 	</footer>
-
 </body>
 <script type="text/javascript" src="script.js"></script>
 </html>
