--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>Loja de pães</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
