changes at subscribe buttons

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 			<div class="product-text" id="myStoreTextDiv">
 				<h3>A loja de pães</h3>
 				<p>A loja é a melhor loja e vamos te oferecer descontos exclusivos. Nós temos assinaturas especiais para nossos clientes.<br><br> Faça seu cadastro para receber nossa divulgação da semana dos pães!</p>
-				<button class="btn-subscribe" href="">Cadastre-se</button>
+				<a href="#form">Cadastre-se</a>
 			</div>
 		</div>
 		<div class="product-wrap">
 			<div class="product-text" id="myProductTextDiv">
 				<h3>Nossos produtos</h3>
 				<p>Feitos artesanalmente e virtualmente com muito carinho. Com os melhores ingredienes inventados. <br><br>  Para garantir sua entrega e uma semana repleta de delícias virtuais, faça seu cadastro.</p>
-				<button class="btn-subscribe" href="">Cadastre-se</button>
+				<a href="#form">Cadastre-se</a>
 			</div>
 			<div class="image-two" id="myProductDiv">
 			</div>
